<resources>

    <string name="app_name">LAB_1</string>

    <string name="button">Button</string>
    <string name="secondActivityButton">Second Activity</string>
    <string name="textView">Text View</string>
    <string name="add_line">add line</string>
    <string name="textview">textView</string>
    <string name="second_activity">second activity</string>
    <string name="remove_text"><![CDATA[remove text >]]></string>
    <string name="some_text">some text</string>
</resources>
